--- a/inCaptiva-Service/inCaptiva-Service.csproj
+++ b/inCaptiva-Service/inCaptiva-Service.csproj
@@ -61,15 +61,20 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Service1.svc" />
+    <Content Include="InCaptivaService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Service1.svc.cs">
-      <DependentUpon>Service1.svc</DependentUpon>
+    <Compile Include="InCaptivaService.svc.cs">
+      <DependentUpon>InCaptivaService.svc</DependentUpon>
     </Compile>
-    <Compile Include="IService1.cs" />
+    <Compile Include="IInCaptivaService.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repo.cs" />
+    <Compile Include="Task.cs" />
+    <Compile Include="WorkEntry.cs" />
+    <Compile Include="Worker.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
