--- a/inCaptiva-Service/inCaptiva-Service.csproj
+++ b/inCaptiva-Service/inCaptiva-Service.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="InCaptivaService.svc" />
+    <Content Include="ReadMe.txt" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -105,7 +106,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>60305</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
